Update skills layout to match bio block and look neater within the flow of the website. Improve responsive sizing to skills icons

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
         </section>
 
-        <section id="skills">
+        <section id="skills" class="block-center">
             <div class="grid-2-columns">
                 <div class="skills-text">
                     <h3>Skills</h3>
@@ -155,8 +155,8 @@
             </div>
         </section>
 
-        <section id="projects">
-            <h3 class="block-center">Projects I'm working on</h3>
+        <section id="projects" class="block-center">
+            <h3 class="">Projects I'm working on</h3>
             <div class="carousel">
                 <div class="card">
                     <div class="info">
