--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -45,8 +45,8 @@
             <div>
                 <h1>Thank You</h1>
                 <h2>For your Email!</h2>
-                <a href="https://liambowie.github.io/portfolio-v2"><button style="margin: 2rem;">Return to Site</button></a>
-                <button id="confettiCannon" style="margin: 2rem;">More Confetti</button>
+                <a href="https://liambowie.github.io/portfolio-v2"><button class="button" style="margin: 2rem;">Return to Site</button></a>
+                <button class="button" id="confettiCannon" style="margin: 2rem;">More Confetti</button>
             </div>
 
         </section>
