--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <section id="contact" class="block-center">
             <h3>Contact me</h3>
             <form action="https://formsubmit.io/send/f920ad71-d3ec-4186-a719-9247ca81da22" method="POST">
-                <input name="_redirect" type="hidden" id="name" value="http://127.0.0.1:5500/pages/thankyou.html">
+                <input name="_redirect" type="hidden" id="name" value="https://liambowie.github.io/portfolio-v2/pages/thankyou.html">
 
                 <label for="name" class="form-label">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your Name" required>
