Implement gradient shift and pop animation to the hero.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     <main>
         <section id="home" class="hero grid-center">
             <div>
-                <h1>Liam Bowie</h1>
+                <h1>
+                    <span class="rainbow-letter">L</span><span class="rainbow-letter">i</span><span class="rainbow-letter">a</span><span class="rainbow-letter">m</span>
+                    <span class="rainbow-letter">B</span><span class="rainbow-letter">o</span><span class="rainbow-letter">w</span><span class="rainbow-letter">i</span><span class="rainbow-letter">e</span>
+                    
+                </h1>
                 <h2>Front end web developer</h2>
             </div>
         </section>
@@ -116,7 +120,7 @@
                     </figure>
                     <figure class="icon hidden">
                         <img src="./img/javascript.svg" alt="JavaScript icon" aria-label="JavaSCript">
-                        <figcaption>JS</figcaption>
+                        <figcaption>JavaScript</figcaption>
                     </figure>
                 </div>
                 <div id="Frontend Frameworks" class="skills-images">
@@ -126,7 +130,7 @@
                     </figure>
                     <figure class="icon hidden">
                         <img src="./img/redux.svg" alt="Redux logo" aria-label="Redux JS" style="margin-top: 10px">
-                        <figcaption>Redux</figcaption>
+                        <figcaption style="padding-top: 1rem;">Redux</figcaption>
                     </figure>
                 </div>
                 <div id="Testing Frameworks" class="skills-images">
