Implement rainbow letters feature on Thank You page. Make 3d effect on profile photo more prominent. Add visible shortest and longest labels to bio length radio group.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script defer src="script.js"></script>
+    <script defer src="rainbow-letters.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 
@@ -74,27 +75,27 @@
                             <div id="bio-radio-group" class="grid-6-columns bio-option-radios">
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="shortest" value="0" checked="true">
-                                    <label for="shortest" style="display: none">shortest</label>
+                                    <label class="bio-label shortest" for="shortest">shortest</label>
                                 </div>
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="shorter" value="1">
-                                    <label for="shorter" style="display: none">shorter</label>
+                                    <label class="bio-label" for="shorter" style="display: none">shorter</label>
                                 </div>
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="short" value="2">
-                                    <label for="short" style="display: none">short</label>
+                                    <label class="bio-label" for="short" style="display: none">short</label>
                                 </div>
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="long" value="3">
-                                    <label for="long" style="display: none">long</label>
+                                    <label class="bio-label" for="long" style="display: none">long</label>
                                 </div>
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="longer" value="4">
-                                    <label for="longer" style="display: none">longer</label>
+                                    <label class="bio-label" for="longer" style="display: none">longer</label>
                                 </div>
                                 <div class="bio-option">
                                     <input type="radio" name="bio-length" id="longest" value="5">
-                                    <label for="longest" style="display: none">longest</label>
+                                    <label class="bio-label longest" for="longest">longest</label>
                                 </div>
                             </div>
                         </fieldset>
