--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,400;0,600;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../reset.css" type="text/css">
     <link rel="stylesheet" href="../styles.css" type="text/css">
-    <link rel="stylesheet" href="./thankyou.css" type="text/css">
+    <script defer src="../rainbow-letters.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 
@@ -43,8 +43,11 @@
     <main>
         <section id="home" class="hero grid-center" style="height: 100vh; padding: 0;">
             <div>
-                <h1>Thank You</h1>
-                <h2>For your Email!</h2>
+                <h1>
+                    <span class="rainbow-letter">T</span><span class="rainbow-letter">h</span><span class="rainbow-letter">a</span><span class="rainbow-letter">n</span><span class="rainbow-letter">k</span>
+                    <span class="rainbow-letter">Y</span><span class="rainbow-letter">o</span><span class="rainbow-letter">u</span>
+                </h1>
+                <h2>For leaving a message!</h2>
                 <a href="https://liambowie.github.io/portfolio-v2"><button class="button" style="margin: 2rem;">Return to Site</button></a>
                 <button class="button" id="confettiCannon" style="margin: 2rem;">More Confetti</button>
             </div>
