Remove padding-bottom from body and add to bottom of the contact form. Not the Thank you page will not scroll

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
         </section>
 
-        <section id="contact" class="block-center">
+        <section id="contact" class="block-center page-end">
             <h3>Contact me</h3>
             <form action="https://formsubmit.io/send/f920ad71-d3ec-4186-a719-9247ca81da22" method="POST">
                 <input name="_redirect" type="hidden" id="name" value="https://liambowie.github.io/portfolio-v2/pages/thankyou.html">
