Implement new project card design that fits better with the aesthetic of the rest of the site

--- a/index.html
+++ b/index.html
@@ -165,19 +165,23 @@
 
         <section id="projects" class="block-center">
             <h3 class="">Projects I'm working on</h3>
-            <div class="carousel">
-                <div class="card">
-                    <div class="info">
-                        <h4 class="project-title">DnD DM Dashboard</h4>
-                        <p class="project-description">A Dungeons and Dragons Dungeon Master dashboard that allows DMs to see player stats at a glance and allows DMs and players to update stats in realtime.</p>
-                        <div class="project-skills">
-                            <p>Skills:</p>
-                            <img src="./img/react.svg" alt="ReactJS logo" aria-label="React JS">
-                            <img src="./img/jest.svg" alt="Jest JS logo" aria-label="Jest JS testing framework">
+
+                <div class="card-container">
+                    <div class="card">
+                        <h4 class="card-title">DnD DM Dashboard</h4>
+                        
+                        <img class="card-visual" src="./img/phb.jpg" alt="Dungeons and Dragons Player Handbook cover">
+                        
+                        <p>A Dungeons and Dragons Dungeon Master dashboard that allows DMs to see player stats at a glance and allows DMs and players to update stats in realtime.</p>
+
+                        <p>Skills:</p>
+                        <div class="card-skills">
+                            <img class="card-skill-icon" src="./img/react.svg" alt="ReactJS logo" aria-label="React JS">
+                            <img class="card-skill-icon" src="./img/jest.svg" alt="Jest JS logo" aria-label="Jest JS testing framework">
                         </div>
                     </div>
-                    <img src="./img/dnd.png" alt="Git Bash logo" aria-label="git bash version control" style="width: 100px">
                 </div>
+
         </section>
 
         <section id="contact" class="block-center page-end">
