edit style of strong to be bold and remove surname from bio

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                         </fieldset>
                     </form>
-                    <p><strong>Liam Bowie</strong> <span id="bio-text">wants to build cool things.</span></p>
+                    <p><strong>Liam</strong> <span id="bio-text">wants to build cool things.</span></p>
                 </div>
         </section>
 
