Add meta tag with description of teh website for Google search

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" Liam Bowie is a skilled computer scientist and musician with a passion for solving puzzles and building cool projects. He holds first class honours degrees in both computer science and music education. Currently focusing on front end web development, he aspires to become a full stack engineer and build innovative projects.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,400;0,600;1,200&display=swap" rel="stylesheet">
